# alert-hub-backend

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.py  docker-compose.yml  gh-docker-compose.yml  init.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  schema.graphql  startup.sh  testresuet.py
.github/workflows/: ci.yaml  deploy-azure_cap-aggregator.yml  develop_alert-manager.yml  python-test.yaml
AlertManager/: asgi.py  settings.py  urls.py  wsgi.py
alert-manager/: requirements.txt
alert-manager/.github/workflows/: deploy-azure_alert-manager.yml
alert-manager/alertmanager/: db_router.py  wsgi.py
alert-manager/cache/: info_areas_cache.py
alert_cache/: admin.py  alert_urls.py  apps.py  cache.py  country_urls.py  models.py  remove.py  tasks.py  urls.py  views.py
alert_cache/migrations/: 0001_initial.py  0002_capfeedalertdistrict_capfeeddistrict_and_more.py  0003_alter_capfeedalert_options_and_more.py
alertmanager/: asgi.py  celery.py  production.py  settings.py  urls.py  wsgi.py
apps/cap_feed/: admin.py  apps.py  data_injector.py  dataloaders.py  enums.py  filters.py  models.py  orders.py  queries.py  tasks.py  tests.py  types.py  urls.py  views.py
apps/cap_feed/formats/: atom.py  cap_xml.py  format_handler.py  nws_us.py  rss.py  utils.py
apps/cap_feed/migrations/: 0001_initial.py
apps/subscription/: admin.py  apps.py  models.py  schema.py  tests.py
apps/subscription/migrations/: 0001_initial.py
apps/subscription_manager/: admin.py  apps.py  external_alert_models.py  models.py  subscription_alert_mapping.py  tasks.py  tests.py  urls.py  views.py
apps/user/: apps.py  dataloaders.py  enums.py  middleware.py  models.py  mutations.py  queries.py  schema.py  tasks.py  tests.py
cache/: admin.py  admin1_alerts_cache.py  admin1s_cache.py  alert_cache.py  alerts_cache.py  apps.py  countries_cache.py  country_admin1s_cache.py  country_cache.py  country_districts_cache.py  district_alerts_cache.py  districts_cache.py  info_areas_cache.py  models.py  polygons_cache.py  region_cache.py  region_countries_cache.py  tasks.py  urls.py  views.py
cache/migrations/: 0001_initial.py
legacy/alert-manager/: manage.py
legacy/subscription-system/: data_generator.py
main/: asgi.py  azure_storage.py  cache.py  celery.py  graphql.py  production.py  settings.py  testing.py  urls.py  wsgi.py
main/graphql/: context.py  dataloaders.py  enums.py  schema.py
scripts/: init.sh  run_tests.sh
subscription-system/: data_generator.py
subscription-system/project/: settings.py  urls.py  wsgi.py
utils/: common.py
utils/strawberry/: enums.py  mutations.py  paginations.py  serializers.py  transformers.py  types.py
(+13 files in other folders)
